# rust-common

./: COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  README.md  README.zh_CN.md  coverage.sh  rustfmt.toml
.circleci/: COMPLETION_SUMMARY.md  COVERALLS_SETUP.zh_CN.md  QUICKSTART.zh_CN.md  README.md  README.zh_CN.md  README_GENERIC.md  SETUP.md  SETUP.zh_CN.md  config.yml
.rs-ci/: ci-check.sh  coverage.sh
examples/: util_demo.rs
src/: lib.rs
src/lang/: box_error.rs  data_converter.rs  data_type.rs  mod.rs
src/lang/argument/: README.md  README.zh_CN.md  argument_error.rs  collection.rs  collection_argument.rs  condition.rs  error.rs  mod.rs  numeric.rs  numeric_argument.rs  option.rs  option_argument.rs  string.rs  string_argument.rs
src/lang/converter/: blank_string_policy.rs  boolean_conversion_options.rs  collection_conversion_options.rs  data_conversion_error.rs  data_conversion_options.rs  data_conversion_result.rs  data_convert_to.rs  data_converter.rs  data_converters.rs  data_list_conversion_error.rs  data_list_conversion_result.rs  empty_item_policy.rs  mod.rs  scalar_string_data_converters.rs  string_conversion_options.rs
src/lang/datatype/: data_type.rs  data_type_of.rs  data_type_parse_error.rs  mod.rs
src/lang/error/: box_error.rs  box_result.rs  dyn_error.rs  into_box_error.rs  mod.rs
src/util/: mod.rs
src/util/tuple/: README.md  README.zh_CN.md  mod.rs  pair.rs  triple.rs
tests/: lang_tests.rs  util_tests.rs
tests/lang/: data_converter_tests.rs  data_type_tests.rs  mod.rs
tests/lang/argument/: collection_tests.rs  condition_tests.rs  error_tests.rs  numeric_tests.rs  option_tests.rs  string_tests.rs
tests/lang/converter/: boolean_conversion_options_tests.rs  collection_conversion_options_tests.rs  data_conversion_error_tests.rs  data_conversion_options_tests.rs  data_converter_tests.rs  data_converters_tests.rs  mod.rs  scalar_string_data_converters_tests.rs  string_conversion_options_tests.rs
tests/lang/datatype/: data_type_of_tests.rs  data_type_parse_error_tests.rs  data_type_tests.rs  mod.rs
tests/lang/error/: mod.rs  (+4 more)
tests/util/: mod.rs
(+3 files in other folders)
