[package]
name = "qubit-common"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rust-common"
description = "Foundational utilities and language-level tools for Rust application development"
homepage = "https://github.com/qubit-ltd/rust-common"
documentation = "https://docs.rs/qubit-common"
readme = "README.md"
keywords = ["utility", "validation", "argument", "datatype", "qubit"]
categories = ["development-tools", "rust-patterns"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_common"
doctest = false

[dependencies]
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
