[package]
name = "qubit-common"
version = "0.7.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-common"
description = "Foundational utilities and language-level tools for Rust application development"
homepage = "https://github.com/qubit-ltd/rs-common"
documentation = "https://docs.rs/qubit-common"
readme = "README.md"
keywords = ["utility", "validation", "argument", "datatype", "qubit"]
categories = ["development-tools", "rust-patterns"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_common"
doctest = true

[dependencies]
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
